--- a/.github/workflows/build_2023.yml
+++ b/.github/workflows/build_2023.yml
@@ -5,8 +5,8 @@ jobs:
     name: Build Theory
     steps:
       - uses: actions/checkout@v3
-      - uses: lexbailey/isabelle-theory-build-github-action@v7
+      - uses: lexbailey/isabelle-theory-build-github-action@v8
         with:
-          isabelle-version: '2021-1'
+          isabelle-url: 'https://github.com/seL4/isabelle/archive/refs/tags/Isabelle2023.tar.gz'
           report_url: 'https://isabelle-utp-ci-dashboard.link/submit_job_log'
           report_secret: ${{ secrets.DashboardReportKey }}
